--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,14 @@ server.port=8000
 
 
 
-spring.datasource.username=postgres
-spring.datasource.password=marviniscool
-spring.datasource.url=jdbc:postgresql://localhost:5432/web_app
+spring.datasource.url=jdbc:mysql://localhost:3306/ecological_footprint_db
+spring.datasource.username=root
+spring.datasource.password=Dom200598!
 
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+springdoc.api-docs.path=/api-docs
