--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,7 +67,7 @@
 		</dependency>
 		<dependency>
     		<groupId>jakarta.servlet</groupId>
-    		<artifactId>jakarta.servlet-api</artifactId> <!-- Use the latest version compatible with your Spring Boot version -->
+    		<artifactId>jakarta.servlet-api</artifactId> 
 		</dependency>
 
 		<dependency>
@@ -93,6 +93,11 @@
     		<artifactId>java-jwt</artifactId>
     		<version>3.18.2</version>
 		</dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
