--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,5 +15,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 springdoc.api-docs.path=/api-docs
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maxpopovschii@gmail.com
+spring.mail.password=zney mynb bsjr eamg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
 
 jwt_secret=Very Very Secret Phrase
