--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,20 +7,27 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@react-google-maps/api": "^2.20.3",
+    "@react-leaflet/core": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "axios": "^1.7.7",
+    "@types/react-leaflet": "^2.8.3",
+    "@vis.gl/react-google-maps": "^1.4.1",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
