--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8000
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecological_footprint_db
+spring.datasource.url=jdbc:mysql://root:wyAdMXEnjsmQPwYmYDfFxiXVUROmigKa@crossover.proxy.rlwy.net:40180/railway
 spring.datasource.username=root
-spring.datasource.password=Dom200598!
+spring.datasource.password=wyAdMXEnjsmQPwYmYDfFxiXVUROmigKa
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
