--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 
 
 
-spring.datasource.url=jdbc:mysql://root:wyAdMXEnjsmQPwYmYDfFxiXVUROmigKa@crossover.proxy.rlwy.net:40180/railway
+spring.datasource.url=jdbc:mysql://root:wyAdMXEnjsmQPwYmYDfFxiXVUROmigKa@mysql.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=wyAdMXEnjsmQPwYmYDfFxiXVUROmigKa
 
